fix: Properly retain whitespace sequence (#10984)

--- a/frappe/public/less/quill.less
+++ b/frappe/public/less/quill.less
@@ -10,10 +10,6 @@
 }
 
 .ql-editor {
-	white-space: normal;
-}
-
-.ql-editor {
 	font-family: @font-stack;
 	line-height: 1.6;
 
